# DevEnv-Setup

./: .gitignore  LICENSE  README.md  devenv.yaml  install.ps1  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: devenv.py
tests/: test_devenv.py
